force-app/main/default/objects/QuoteLineItem/fields/E2E_Symph_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>E2E_Symph_Recommendation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate this Quote Line Item was created because it is a Recommended Plan</description>
    <label>Recommendation</label>
    <type>Checkbox</type>
</CustomField>