force-app/main/default/objects/QuoteLineItem/fields/E2E_Symphony_Recommendation_Order__c.field-meta.xml
<CustomField>
    <fullName>E2E_Symphony_Recommendation_Order__c</fullName>
    <description>This is used to hold the order the recommended plans come back in, this is required as the order needs to be kept on the API return,</description>
    <label>Recommendation Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>