force-app/main/default/objects/QuoteLineItem/fields/rate_eeChild__c.field-meta.xml
<CustomField>
    <fullName>rate_eeChild__c</fullName>
    <label>rate_eeChild</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>