force-app/main/default/objects/QuoteLineItem/fields/rate_eeChildren__c.field-meta.xml
<CustomField>
    <fullName>rate_eeChildren__c</fullName>
    <label>rate_eeChildren</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>