force-app/main/default/objects/QuoteLineItem/fields/rate_family__c.field-meta.xml
<CustomField>
    <fullName>rate_family__c</fullName>
    <label>rate_family</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>