force-app/main/default/objects/QuoteLineItem/fields/rate_single_number__c.field-meta.xml
<CustomField>
    <fullName>rate_single_number__c</fullName>
    <label>rate_single_number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>