force-app/main/default/objects/QuoteLineItem/fields/rate_twoParty__c.field-meta.xml
<CustomField>
    <fullName>rate_twoParty__c</fullName>
    <label>rate_twoParty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>